fixing some bugs and stuff
